fix: apple watch overflow for mobile devices

--- a/assets/css/theme.css
+++ b/assets/css/theme.css
@@ -577,4 +577,29 @@ article[data-theme="apple"] .clock .min:after {
     transform: translateY(29px);
 }
 
-
+@media (max-width: 500px) {
+    article[data-theme="apple"] .clock {
+        width: 100%;
+        height: 100%;
+        border-radius: 0;
+        background-position-x: 50%;
+    }
+    article[data-theme="apple"] .clock .hr,
+    article[data-theme="apple"] .clock .min,
+    article[data-theme="apple"] .clock .sec {
+        height: 20%;
+    }
+    article[data-theme="apple"] .clock .hr:before,
+    article[data-theme="apple"] .clock .min:before {
+        transform: translateY(2%);
+    }
+    article[data-theme="apple"] .clock .min:before {
+        transform: translateY(-30%);
+    }
+    article[data-theme="apple"] .clock .hr:after,
+    article[data-theme="apple"] .clock .min:after {
+        height: 9%;
+        transform: translateY(469%);
+    }
+    
+}
